# Capstone

./: CMakeLists.txt  CommonUtils.cpp  CommonUtils.hpp  CoreEngine.cpp  CoreEngine.hpp  MathBridgeJNI.cpp  MathCore.hpp  Preprocessor.cpp  README.md  build.ps1  pom.xml
AbstractAlgebra/: AA.cpp  AA.hpp
AppliedMath/: AM.cpp  AM.hpp
Calculus/: CMakeLists.txt  Calculus.cpp  Calculus.hpp
Calculus/core/: Expression.cpp  Expression.hpp  Simplify.cpp  Simplify.hpp  Week4Bridge.cpp  Week4Bridge.hpp
Calculus/differentiation/: Derivative.cpp  Derivative.hpp  Implicit.cpp  Implicit.hpp  Partial.cpp  Partial.hpp
Calculus/integration/: Multivariable.cpp  Multivariable.hpp  Numerical.cpp  Numerical.hpp  Symbolic.cpp  Symbolic.hpp
Calculus/limits/: Limits.cpp  Limits.hpp
Calculus/optimization/: Optimize.cpp  Optimize.hpp
Calculus/series/: Convergence.cpp  Convergence.hpp  Series.cpp  Series.hpp
Calculus/vectorcalc/: LineIntegral.cpp  LineIntegral.hpp  SurfaceIntegral.cpp  SurfaceIntegral.hpp  Theorems.cpp  Theorems.hpp  VectorOps.cpp  VectorOps.hpp
ComplexAnalysis/: CA.cpp  CA.hpp
DIscreteMath/: DM.cpp  DM.hpp
DiffEq/: DE.cpp  DE.hpp  DEAdv.cpp
Geometry/: Geom.cpp  Geom.hpp
Linear_Algebra/: LA.cpp  LA.hpp
NumberTheory/: NumberTheory.cpp  NumberTheory.hpp
NumericalAnalysis/: NA.cpp  NA.hpp
ProbabilityTheory/: PT.cpp  PT.hpp
Statistics/: Advanced_Statistics.cpp  Statistics.cpp  Statistics.hpp  Statistics_internal.hpp
include/: com_mathengine_jni_MathBridge.h
java/com/mathengine/jni/: MathBridge.java
java/com/mathengine/model/: PrecisionMode.java
java/com/mathengine/ui/: AccessibilityToolbar.java  AuthService.java  CalcExpressionBuilder.java  DatasetImportPanel.java  GraphPanel.java  InputPanel.java  LatexRenderer.java  Launcher.java  LoginScreen.java  MainLayout.java  MathEngineApp.java  MathKeyboard.java  OperationPanel.java  OutputPanel.java  QuickFunctionsPanel.java  SettingsPanel.java  ThemeManager.java  regUser.java
parser/include_week_four/: evaluator.hpp  lexer.hpp  parser.hpp  value.hpp
parser/src_week_four/: evaluator.cpp  lexer.cpp  parser.cpp
resources/css/: base.css  dark.css  font-large.css  font-normal.css  font-x-large.css  high-contrast.css  light.css
scripts/: Linker_Fixer.ps1  build_and_run.ps1  project_health_report.ps1  update_cmake.ps1
server/: mathengine.db-shm  mathengine.db-wal  pom.xml
server/src/main/java/com/mathengine/com/mathengine/server/: MathEngineServer.java
server/src/main/java/com/mathengine/com/mathengine/server/api/: AuthController.java  ComputeController.java  HistoryController.java
server/src/main/java/com/mathengine/com/mathengine/server/auth/: JwtFilter.java  JwtService.java  SecurityConfig.java  SecurityUtils.java
server/src/main/java/com/mathengine/com/mathengine/server/db/: DatabaseManager.java
server/src/main/java/com/mathengine/com/mathengine/server/engine/: ServerEngineService.java
server/src/main/java/com/mathengine/com/mathengine/server/model/: Models.java
